k8s/backend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: expenses-backend-service
spec:
  selector:
    app: expenses-backend
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
